# eigen3

./:  package.sh  README.en.md  README.md  build.sh  setup.py
onnx_converter/: .clang-format  .clang-format-ignore  .cmake-format.py  .gitignore  .gitmodules  .style.yapf  OnnxConverter.py  __init__.py  format.sh  pytest.ini  run-clang-format.py
onnx_converter/benchmark/: README.md  __init__.py  benchmark.py  benchmark.sh  requirement.txt
onnx_converter/benchmark/benchmark_config/: __init__.py  face_antispoof.py  face_recognition.py  imagenet.py  object_detection.py  pedestrian_detection.py  retina_face_detection.py
onnx_converter/benchmark/scripts/: delete_blank_pages.py  export_visualization.sh  mmd2pdf.py  save_export.sh
onnx_converter/benchmark/tests/: conftest.py  test_anti_spoofing.py  test_base.py  test_face_recognition.py  test_imagenet.py  test_object_detection.py  test_pedestrian_detection.py  test_retina_face_detection.py
onnx_converter/checkpoint/: __init__.py  attribute.py  checkpoint.py  export.py  kaldi_preprocess.py  onnxsim.py  preprocess.py
onnx_converter/config/: analysis.py  config.py  export.py  export_v1.py  export_v2.py  export_v3.py  graph.py  parse.py  quantize.py  quantize_fp.py  simulation.py  tools.py  validation.py  vision_quantize.py  voice_quantize.py
onnx_converter/eval/: README.md  __init__.py  eval_base.py  test_anti_spoofing.py  test_face_recognition.py  test_gesture_classification.py  test_gesture_recognition.py  test_hand_detection.py  test_hand_keypoint_detection.py  test_hisense.py  test_imagenet.py  test_object_detection.py  test_pedestrian_detection.py  test_pose_estimation.py  test_retina_face_detection.py
onnx_converter/eval/alfw/: __init__.py  alfw.py
onnx_converter/eval/coco_eval/: __init__.py  cocoeval.py
onnx_converter/eval/face_antispoof/: __init__.py  face_antispoof.py
onnx_converter/eval/face_recognition/: __init__.py  face_recognition.py
onnx_converter/eval/hand_keypoint/: __init__.py  hand_keypoint.py
onnx_converter/eval/imagenet_eval/: __init__.py  imagenet_eval.py
onnx_converter/export/: __init__.py  interface_model_b.py  model_export.py
onnx_converter/extension/: __init__.py
onnx_converter/extension/modules/operationstoolbox/: CMakeLists.txt  README.md  main.cpp  pytest.ini  test_rt.cc
onnx_converter/extension/modules/operationstoolbox/cmake/: cuda.cmake  download_onnx_lib.cmake  examples.cmake  set_ifndef.cmake  unzip.py
onnx_converter/extension/modules/operationstoolbox/ops/core/: CMakeLists.txt  common.h  eigen_utils.h  system.cmake
onnx_converter/extension/modules/operationstoolbox/ops/core/include/: eigen_ops.h  env.h  resize.h  splice.h
onnx_converter/extension/modules/operationstoolbox/ops/core/platform/: CMakeLists.txt  context_engine.cc  context_engine.h  eigen_thread_pool.cc  eigen_thread_pool.h  environment.cc  environment.h  mace_thread_pool.cc  mace_thread_pool.h  thread_utils.cc  thread_utils.h  timesintelli_mutex.cc  timesintelli_mutex.h
onnx_converter/extension/modules/operationstoolbox/ops/core/src/: eigen_ops.cc  env.cc  resize.cc  resize.cu  splice.cc  splice.cu
onnx_converter/extension/modules/operationstoolbox/ops/ort_extension/: CMakeLists.txt
onnx_converter/extension/modules/operationstoolbox/ops/ort_extension/custom_op_library/: CMakeLists.txt  custom_deformconv.cc  custom_deformconv.h  custom_op_library.cc  custom_op_library.cu  custom_op_library.def  custom_op_library.h  custom_op_library.lds  custom_splice.cc  custom_splice.h  register_custom_ops.cc  register_custom_ops.h
onnx_converter/extension/modules/operationstoolbox/ops/pyapi/: CMakeLists.txt  py_def.cc  py_def.h  py_eigen_ops.cc  py_eigen_ops.h  py_ops.cc  py_ops.h  py_splice.cc  py_splice.h  pyapi.cc
onnx_converter/extension/modules/operationstoolbox/test/cpp/ops/: CMakeLists.txt  splice_test.cc
onnx_converter/extension/modules/operationstoolbox/test/cpp/ops/example/: CMakeLists.txt  example.cc
onnx_converter/extension/modules/operationstoolbox/test/cpp/ops/example/module/: add.cc
onnx_converter/extension/modules/operationstoolbox/test/cpp/ort_ops/: test_add.cc
onnx_converter/extension/modules/operationstoolbox/test/python/ops/: test_cpu_add.py  test_cpu_splice.py  test_eigen_ops.py  test_gpu_splice.py  test_ops.py
onnx_converter/extension/modules/operationstoolbox/test/python/ort_ops/: test_add.py  test_rt.py
onnx_converter/extension/modules/operationstoolbox/test/testdata/: splice.onnx
onnx_converter/extension/modules/quantizetoolbox/: CMakeLists.txt
onnx_converter/extension/modules/quantizetoolbox/src/: kld.cpp
onnx_converter/extension/modules/quantizetoolbox/utils/: fitter.py
onnx_converter/extension/modules/quantizetoolbox/weight_optimization/: weight_opt.py
onnx_converter/graph/: __init__.py  data.py  functional.py  graph.py  layer.py
onnx_converter/model_zoo/: coco_names.py  eval_yolox_nano_clipped.py
onnx_converter/model_zoo_test/: imagenet.py
onnx_converter/quantizer/: __init__.py  analysis.py  data_correct.py  data_quan.py  graph_quan.py  weight_opt.py
onnx_converter/simulator/: __init__.py  checkerror.py  error_analysis.py  graph_simulation.py  operations.py  perf_analysis.py
onnx_converter/tests/: __init__.py  test_asr.py  test_asr_session.py  test_build_model.py  test_checkpoint.py  test_config.py  test_encrypt.py  test_error_analyzer.py  test_export.py  test_graph.py  test_layer.py  test_node.py  test_operations.py  test_perf_analyzer_face_detection.py  test_perf_analyzer_imagenet.py  test_process.py  test_quantize.py  test_simulation.py  test_speedup.py  test_visualization.py  test_voice.py  test_voice_zx.py
onnx_converter/tools/: DataToolBox.py  ExecuteEstimation.py  Optimizer.py  PostQuanSimulation.py  PostTrainingQuan.py  QuanAwareTraining.py  QuanTableParser.py  __init__.py  cvt2torch.py  qat.py  torch2qat.py
onnx_converter/utest/: __init__.py  export_layer.py  exportlayerbase.py  generate_attrs_case.py  run_export_layer.py
onnx_converter/utils/: BaseObject.py  Register.py  __init__.py  image.py  logger.py  print_.py  similarity.py  utils.py
(+103 files in other folders)
